<resources>
    <string name="app_name">WikiDesign</string>
    <plurals name="days">

        <item quantity="zero">%d Days</item>
        <item quantity="one">%d Day</item>
        <item quantity="other">%d Days</item>
    </plurals>
    <plurals name="nights">
        <item quantity="zero">%d Nights</item>
        <item quantity="one">%d Night</item>
        <item quantity="other">%d Nights</item>
    </plurals>
    <plurals name="rooms">
        <item quantity="zero">%d Rooms</item>
        <item quantity="one">%d Room</item>
        <item quantity="other">%d Rooms</item>
    </plurals>
    <plurals name="guests">
        <item quantity="zero">%d Guests</item>
        <item quantity="one">%d Guest</item>
        <item quantity="other">%d Guests</item>
    </plurals>
    <plurals name="adults">
        <item quantity="zero">%d Adults</item>
        <item quantity="one">%d Adult</item>
        <item quantity="other">%d Adults</item>
    </plurals>
    <plurals name="children">
        <item quantity="zero">%d Children</item>
        <item quantity="one">%d Child</item>
        <item quantity="other">%d Children</item>
    </plurals>
    <string name="splash_screen_text">25 HOURS</string>
    <string name="sign_in_text">Headtitle goes here</string>
    <string name="welcome_user">Welcome, Kevin</string>
    <string name="completed_setup">Preferences setup completed</string>
    <string name="completed_description">Please wait while we set personalised content up for you.</string>
    <string name="sign_in_description">Description goes here. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam.</string>
    <string name="sign_in_explore">Explore</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_in_email">Email</string>
    <string name="sign_in_password">Password</string>
    <string name="remember">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enable_touch">Enable Touch ID</string>
    <string name="enable_face">Enable Face ID</string>
    <string name="next">Next</string>
    <string name="registration">Please wait while we set personalised content up for you.</string>
    <string name="hi_profile">Hi, Kevin</string>
    <string name="preferences_profile"><b>Set your interest preferences now, Kevin</b>.\nWhat would you like to experience with us?</string>
    <string name="profile_account">Account</string>
    <string name="profile_member_interest">Member Interest Preferences</string>
    <string name="profile_membership">Membership</string>
    <string name="profile_activity_history">Activity History</string>
    <string name="profile_notification_center">Notification Center</string>
    <string name="profile_address">My Address</string>
    <string name="profile_payment_details">Payment Details</string>
    <string name="profile_referral">Member Referral</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_support">Support</string>
    <string name="profile_about">About</string>
    <string name="profile_logout">Logout</string>
    <string name="filter_sort_by">Sort By</string>
    <string name="filter_category">Category</string>
    <string name="filter_brand">Brand</string>
    <string name="filter_sort_recommended">Recommended</string>
    <string name="filter_sort_popularity">Popularity</string>
    <string name="filter_sort_rating">Rating</string>
    <string name="filter_sort_saving">Saving</string>
    <string name="filter_sort_distance">Distance</string>
    <string name="filter_category_placeholder">Category Placeholder</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="skip">Skip</string>
    <string name="selected_category_description">Please select a few categories that you would like to experience with us.</string>
    <string name="pick_description">Pick at least five.</string>
    <string name="operating_hours">Mon to Fri: 0900 to 1800\n Eve of PH: 0900 to 1300\n PH, Sat, Sun: Office Closed</string>
    <string name="limit_file">Some of the images you have selected exceed 2MB.</string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="label_update_now">Update Now</string>
    <string name="btn_label_retry">Retry</string>
    <string name="btn_label_ok">OK</string>
    <string name="btn_label_cancel">Cancel</string>
    <string name="label_dimiss">Dismiss</string>
    <string name="profile">My Profile</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="issue_profile_card">This digital card is issued by and the property of Sky Premium International Pte Ltd. Use of this digital card constitutes the acceptance by the digital card holder of the terms and conditions of Sky Premium International Pte Ltd.</string>
    <string name="my_favourite">My Favourites</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_my_bookings_label">My Bookings</string>
    <string name="my_orders">My Orders</string>
    <string name="my_reservation">My Reservations</string>
    <string name="my_sky_dollar">My Sky Dollar</string>
    <string name="manage_delivery_address">Manage Delivery Addresses</string>
    <string name="billing_address_title">Manage Billing Addresses</string>
    <string name="manage_credit_cards">Manage Credit Cards</string>
    <string name="invite_friend">Invite a Friend</string>
    <string name="notification_setting">Notification Settings</string>
    <string name="log_out">Logout</string>
    <string name="sky_dollar_exp_on">Sky Dollars Expiring On:</string>
    <string name="cancel_membership_statement"><u>Cancel Membership</u></string>
    <string name="no_order">You have no orders.</string>
    <string name="txt_collected">Complete</string>
    <string name="txt_delivering">Delivering</string>
    <string name="txt_fail">Fail</string>
    <string name="txt_holded">On Hold</string>
    <string name="txt_closed">Closed</string>
    <string name="txt_processing">Processing</string>
    <string name="txt_complete">Complete</string>
    <string name="txt_shipping">Shipping</string>
    <string name="txt_cancelled">Cancelled</string>
    <string name="complementary">Complementary</string>
    <string name="label_amount_format">S$%s</string>
    <string name="txt_renew_membership">renew my annual membership</string>
    <string name="txt_delivery_phone">+65 9123 4567</string>
    <string name="mobile_number_label">Contact Number</string>
    <string name="update">Update</string>
    <string name="travel">Travel</string>
    <string name="sample_product_subtitle">Hotel - Italy</string>
    <string name="wine"><![CDATA[Wine & Dine]]></string>
    <string name="shopping">Shopping</string>
    <string name="shoppingCart">My Shopping Cart</string>
    <string name="wellness">Wellness</string>
    <string name="e_store">Estore</string>
    <string name="membership">Membership Services</string>
    <string name="membership_freshchat">Chat with Support</string>
    <string name="upcoming_event">Upcoming Events</string>
    <string name="handpicked_experiences">Handpicked Experiences</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="top_table">Top Table</string>
    <string name="notice_body_favourite_no_item">Like something you see?\n Save them here to your
    favourites.
  </string>
    <string name="discover_title">Ohmi A5 Wagyu Shabu 250g</string>
    <string name="notice_title_favourite_no_item">You have no favourites yet.</string>
    <string name="sample_product_title">Leone Blu</string>
    <string name="benefits_and_privileges"><![CDATA[Benefits & Privileges]]></string>
    <string name="address">address</string>
    <string name="label_partners">Partners</string>
    <string name="label_products">Products</string>
    <string name="event">Events</string>
    <string name="discover_type_name">FIRE at 1-Atico</string>
    <string name="discover_description">Features the traditional Argentine wood-fire and\nsummit of ION Orchard with breathtaking views</string>
    <string name="bottom_menu_discover">DISCOVER</string>
    <string name="renewal_payment">Payment</string>
    <string name="bottom_menu_shop">SHOP</string>
    <string name="bottom_menu_event">EVENTS</string>
    <string name="bottom_menu_privileges">PRIVILEGES</string>
    <string name="wellness_all_caps">WELLNESS</string>
    <string name="flash_sales_all_caps">FLASH SALES</string>
    <string name="membership_all_caps">MEMBERSHIP SERVICES</string>
    <string name="sale_not_started">COMING SOON</string>
    <string name="sale_over">SALE OVER</string>
    <string name="txt_sold_out">COMING SOON</string>
    <string name="label_estore_item_count_down">ENDS IN</string>
    <string name="no_product_ratings_yet">No product ratings yet</string>
    <string name="platinum">platinum</string>
    <string name="gold">gold</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="buy_now">buy now</string>
    <string name="submitting">Submitting…</string>
    <string name="txt_title_delivery_address">delivery address</string>
    <string name="sky_earned">SKY$ earned</string>
    <string name="incl_prevailing_gst">(INCL. PREVAILING GST)</string>
    <string name="txt_grand_total">grand total</string>
    <string name="label_tax">Tax</string>
    <string name="hint_loyalty_sky_dollars_redeemed">Sky Dollar redeemed</string>
    <string name="total_amount">S$1,160</string>
    <string name="txt_delivery">delivery</string>
    <string name="txt_shipping_fee">shipping fees</string>
    <string name="hint_promocode">Promo Code</string>
    <string name="txt_subtotal">subtotal</string>
    <string name="txt_visa_number">XXXX XXXX XXXX</string>
    <string name="txt_title_payment_detail">payment details</string>
    <string name="txt_address">Blk 123, Ang Mo Kia Ave 10 \n Singapore 512412</string>
    <string name="txt_person_name_address">Laurent Anderson</string>
    <string name="txt_billing_address">Billing Address</string>
    <string name="txt_print">print</string>
    <string name="title_order_id">Order ID:</string>
    <string name="card_selection_not_required_title">Credit Card selection is not required</string>
    <string name="txt_null_creditcard">xxxx</string>
    <string name="no_payment_information_required">No Payment Information Required</string>
    <string name="txt_first_sign_creditcard">xxxx xxxx xxxx</string>
    <string name="overall_quality">Overall Quality</string>
    <string name="comments">Comments</string>
    <string name="submit">Submit</string>
    <string name="review_bottom_cation">All reviews will be moderated based on Sky Premium’s internal guidelines. We reserve the right to reject or remove any review from the site at our sole discretion.</string>
    <string name="less_than_2mb">Less than 2mb</string>
    <string name="thank_you_for_submitting">Thank you for submitting a review. Your review was successfully sent and is pending moderation.</string>
    <string name="thank_you_for_your_feedback">Thank you for your feedback</string>
    <string name="ask_delete_comment">Are you sure you want to delete this comment?</string>
    <string name="negative_answer">No</string>
    <string name="positive_answer">Yes</string>
    <string name="review_submission_successful">Review Submission Successful</string>
    <string name="ask_delete">Are you sure you want to delete this image?</string>
    <string name="edit_review_underline">edit review</string>
    <string name="see_review">SEE REVIEW</string>
    <string name="review">review</string>
    <string name="learn_more">Learn More</string>
    <string name="lorem_description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et…</string>
</resources>