<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgDiscover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/image_discover"
        />

    <TextView
        android:id="@+id/tvDiscoverType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shopping"
        android:textAllCaps="true"
        android:textColor="@color/black_303030"
        android:textSize="@dimen/margin_10"
        android:textAlignment="textStart"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_19"
        android:layout_marginEnd="@dimen/margin_20"
        android:letterSpacing="0.1"
        />

    <TextView
        android:id="@+id/tvDiscoverTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discover_title"
        android:textColor="@color/high_black"
        android:textSize="@dimen/text_size_15"
        android:textAlignment="textStart"
        android:layout_marginTop="@dimen/margin_7"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        
        />
    
    <TextView
        android:id="@+id/tvDiscoverDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lorem_description"
        android:textSize="@dimen/text_size_13"
        android:textColor="@color/black_303030"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        />


    <LinearLayout
        android:id="@+id/layoutLearnMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_border_16_black"
        android:orientation="vertical"
        android:paddingRight="@dimen/margin_16"
        android:paddingLeft="@dimen/margin_16"
        android:paddingTop="@dimen/margin_8"
        android:paddingBottom="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_18"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_255"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/learn_more"
            android:textSize="@dimen/text_size_11"
            />

    </LinearLayout>

</LinearLayout>