<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/greyOpaque"
    android:paddingBottom="57dp"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/profile_support"
        android:textAlignment="textStart"
        android:textColor="@color/high_black"
        android:textSize="13dp" />


    <include layout="@layout/include_view_br"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/profile_about"
        android:textAlignment="textStart"
        android:textColor="@color/high_black"
        android:textSize="13dp" />

    <include layout="@layout/include_view_br"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/profile_logout"
        android:textAlignment="textStart"
        android:textColor="@color/high_black"
        android:textSize="13dp"

        />


</LinearLayout>