<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_discover"

    >

    <LinearLayout
        android:id="@+id/linearPreferencesProfile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_54"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/padding_53"
        android:layout_marginEnd="20dp"
        android:background="@drawable/discover_notification_custom"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/margin_10"
        android:paddingBottom="@dimen/margin_10"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="320dp"
            android:layout_height="38dp"
            android:layout_marginLeft="10dp"
            android:text="@string/preferences_profile"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="13dp" />

        <ImageView
            android:layout_width="11dp"
            android:layout_height="9dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_baseline_arrow_black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="366dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wine"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/margin_10" />

        <TextView
            android:id="@+id/tvDiscoverName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/discover_type_name"
            android:textColor="@color/white"
            android:textSize="@dimen/margin_18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/discover_description"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_13" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/layoutLearnMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_375"
        android:layout_marginEnd="@dimen/margin_255"
        android:layout_marginBottom="@dimen/margin_40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingRight="@dimen/margin_16"
        android:paddingLeft="@dimen/margin_16"
        android:paddingTop="@dimen/margin_8"
        android:paddingBottom="@dimen/margin_8"
        android:background="@drawable/custom_border_16"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_303030"
            android:text="@string/learn_more"
            />


    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>