<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationCompletedActivity"
    android:background="@drawable/splash_screen"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="117.82dp"
        android:layout_marginBottom="509dp"
        android:letterSpacing="0.3"
        android:text="@string/splash_screen_text"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="304dp"
        android:layout_height="30dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="415dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="195dp"
        android:text="@string/completed_setup"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="304dp"
        android:layout_height="38dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="154dp"
        android:text="@string/completed_description"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.092" />

</androidx.constraintlayout.widget.ConstraintLayout>