<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="@drawable/splash_screen"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="117.82dp"
        android:layout_marginBottom="509dp"
        android:letterSpacing="0.3"
        android:text="@string/splash_screen_text"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="304dp"
        android:layout_height="30dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="415dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="195dp"
        android:text="@string/sign_in_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="304dp"
        android:layout_height="38dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="154dp"
        android:text="@string/sign_in_description"
        android:textAlignment="center"
        android:textColor="@color/background"
        android:textSize="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.092" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        >


        <FrameLayout
            android:layout_width="156dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_explore_custom"
            android:layout_marginRight="5dp"
            >

            <RelativeLayout
                android:id="@+id/btnExplore"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/sign_in_explore"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                     />
            </RelativeLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="156dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_sign_in_custom"
            android:layout_marginLeft="5dp"
            >

            <RelativeLayout
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/sign_in_button"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textAllCaps="false"

                    />
            </RelativeLayout>
        </FrameLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>